--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Grâce à ce programme, les Lady's First bénéficient de plusieurs avantages qui leur permettent d'occuper une place de choix au sein de la banque">
+
+    <meta property="og:image" content="./Asset1/images/photo_shared.jpg">
+    <meta property="og:type" content="article">
+    <meta property="og:description" content="Grâce à ce programme, les Lady's First bénéficient de plusieurs avantages qui leur permettent d'occuper une place de choix au sein de la banque">
+    <meta property="og:locale" content="sn_SN">
+    <meta property="og:title" content="Rawbank">
+
+    <meta property="twitter:image" content="./Asset1/images/photo_shared.jpg">
+    <meta property="twitter:description" content="Grâce à ce programme, les Lady's First bénéficient de plusieurs avantages qui leur permettent d'occuper une place de choix au sein de la banque">
+    <meta property="twitter:title" content="Rawbank">
+
+    <link rel="shortcut icon" href="./Asset1/images/favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <title>RAWBANK</title>
 </head>
@@ -24,6 +38,7 @@
             </h1>
             <img class="d-flex " src="./Asset1/images/Rawbank_Ladies-min.png" alt="Rawbank ladies">
         </div>
+        <img id="scroll" src="./Asset1/images/scroll_ico.svg" alt="Scroll icon">
     </header>
 
     <main class="container flex-column">
@@ -32,22 +47,22 @@
             <img class="rawbank-line" src="./Asset1/images/line_logo.svg" alt="line rawbank">
             <h2>Pour une clientèle au féminin</h2>
             <p>
-                En R DC , les femmes sont à la tête de 23 % des entreprises et 70 % des revenus domestiques sont générés
+                En RDC, les femmes sont à la tête de 23% des entreprises et 70% des revenus domestiques sont générés
                 par elles.
-                Programme ambitieux, L ad y ’s First opte pour un, ‘IMPOSSIBLE N’EST PAS FEMININ’ ,
+                Programme ambitieux, Lady’s First opte pour un, L'IMPOSSIBLE N’EST PAS FEMININ’,
 
-                qui démontre la volonté de Rawbank d’atteindre et accompagner ce segment de clientèle qui j oue un r ô
-                le important
+                qui démontre la volonté de Rawbank d’atteindre et accompagner ce segment de clientèle qui joue un rôle
+                important
 
-                dans les décisions de consommation des ménages. I l a pour vision de faire de RA WB A NK le banquier
+                dans les décisions de consommation des ménages. Il a pour vision de faire de RA WB A NK le banquier
                 privilégié des Femmes
-                Entrepreneures évoluant en République D émocratique du C ongo. Avec mission de :
+                Entrepreneures évoluant en République Démocratique du Congo. Avec mission de :
             <ul>
                 <li>
-                    Améliorer l’accès des femmes entrepreneures aux services financiers ;
+                    Améliorer l’accès des femmes entrepreneures aux services financiers;
                 </li>
                 <li>
-                    Améliorer leur capacité managériale grâce à des formations ciblées ;
+                    Améliorer leur capacité managériale grâce à des formations ciblées;
                 </li>
                 <li>
                     Faciliter leur accès au marché et à l’information.
@@ -68,14 +83,14 @@
             </div>
             <div class="li-row flex-column">
                 <ul class="flex-row">
-                    <li class="w-50">Etre une femme âgée : de 18 ans minimum ;</li>
-                    <li class="w-50">Ouvrir un compte courant pour votre structure chez Rawbank ;</li>
+                    <li class="w-50">Etre une femme âgée: de 18 ans minimum;</li>
+                    <li class="w-50">Ouvrir un compte courant pour votre structure chez Rawbank;</li>
                 </ul>
                 <ul class="flex-row">
                     <li class="w-50">
                         Etre propriétaire d’un établissement ou être actionnaire
-                        dans une société : à au moins 51%, et assurer la gestion
-                        quotidienne de l’entreprise (gérante statutaire) ;
+                        dans une société: à au moins 51%, et assurer la gestion
+                        quotidienne de l’entreprise (gérante statutaire);
                     </li>
                     <li class="w-50">
                         Présenter les documents légaux constitutifs de votre structure;
@@ -83,8 +98,6 @@
                 </ul>
             </div>
             <div class="hexagone container flex-column">
-                <!--                 <img src="./Asset1/images/bg_hexagone-filter.webp" alt="Rawbank hexagone">
- -->
             </div>
         </section>
 
